sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:12: error: not found: value change
        case BLEU => if (getCouleur(bleu+1) != BLEU){change(i,bleu+1)}; bleu += 1;
                                                     ^DutchFlagAlgo:14: error: type mismatch;
 found   : Boolean
 required: Int
        case ROUGE => if(getCouleur(lgr-rouge-1 != ROUGE)){echange(i,lgr-rouge-1)}; rouge += 1;
                                                ^